--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,44 @@
-<ion-menu [content]="content">
+<ion-menu [content]="nav">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
+      <ion-toolbar>
+          <ion-title>Menu</ion-title>
+      </ion-toolbar>
   </ion-header>
-
   <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
+      <ion-list>
+          <button
+          ion-item
+          icon-left
+          (click)="onLoad(rootPage)"
+          *ngIf="isAuthenticated"
+          >
+          <ion-icon name="book"></ion-icon>BookSpace</button>
+          <button
+          ion-item
+          icon-left
+          (click)="onLoad(signinPage)"
+          *ngIf="!isAuthenticated"
+          ><ion-icon name="log-in" ></ion-icon>Sign in</button>
+          <button
+          ion-item
+          icon-left
+          (click)="onLoad(signupPage)"
+          *ngIf="!isAuthenticated"
+          ><ion-icon name="person"></ion-icon>Sign up</button>
+          <button
+          ion-item
+          icon-left
+          (click)="onLogout()"
+          *ngIf="isAuthenticated"
+          ><ion-icon name="log-out"></ion-icon>logout</button>
+          <button
+          ion-item
+          icon-left
+          (click)="onLoad(dustbinPage)"
+          
+          ><ion-icon name="trash"></ion-icon>Locate-Dustbins</button>
+      </ion-list>
   </ion-content>
-
-</ion-menu>
-
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+  </ion-menu>
+  <ion-nav [root]="rootPage" #nav></ion-nav>
+  
